# Test-taks

./: .coverage  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  models.py
app/routes/: articles.py  auth.py  users.py
migrations/: env.py
migrations/versions/: 37fe093d1555_replace_enum_with_string_and_check_.py  5da802d75331_update_articles_table.py  94c8db31328c_initial_migration.py  98e0912df562_add_viewer_role_to_userrole_enum.py  f00588ea9984_update_password_hash_to_text.py
scripts/: populate_db.py
tests/: Test task CHI.postman_collection.json  conftest.py  test_articles.py  test_auth.py  test_users.py
